<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/enable_images">

        <CheckBoxPreference
            android:key="checkbox_enable_animation"
            android:title="@string/title_checkbox_enable_animation"
            android:summary="@string/summary_checkbox_enable_animation" />

        <ListPreference
            android:key="list_default_image"
            android:title="@string/title_list_default_image"
            android:summary="@string/summary_list_default_image"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:title="@string/source_title"
            android:key="source_button"
            android:summary="@string/source_summary"/>


    </PreferenceCategory>

</PreferenceScreen>
    