<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        style="@style/BackGroundImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:text="@string/button_enable"
        android:id="@+id/button"
        android:layout_gravity="center_vertical"
        android:textSize="32sp"
        android:alpha="0.8"
        android:background="#ce45433e"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/source_summary_lines"
        android:id="@+id/textView"
        android:textIsSelectable="true"
        android:textSize="32sp"
        android:textColor="#ffffffff"
        android:width="290dp"
        android:textAlignment="center"
        android:lines="3"
        android:autoText="true"
        android:background="#be658a94"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appmaker_summary_lines"
        android:id="@+id/textView2"
        android:textIsSelectable="true"
        android:textSize="32sp"
        android:textColor="#ffffffff"
        android:width="290dp"
        android:textAlignment="center"
        android:lines="3"
        android:autoText="true"
        android:background="#be658a94"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>
